# rmenu-ng

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: command.rs  config.rs  desktop_entry.rs  gui.rs  main.rs
