[package]
name = "rmenu-ng"
version = "0.2.0"
authors = ["walker84837"]
description = "A rofi and dmenu inspired menu"
repository = "https://github.com/walker84837/rmenu-ng"
readme = "README.md"
edition = "2024"
license = "WTFPL" # TODO: change license

[dependencies]
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
